--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.flex{
+  display:flex;
+  /* justify-content: space-between; */
+ 
+  flex-wrap :wrap;
+  
+}
+.card-space{
+  padding : 10px 10px 10px 0px;
+  text-align : center;
+  
+}
